# site

./: 404.html  CNAME  README.md  contribution.html  history.html  index.html  package-lock.json  skills.html
.github/workflows/: data_fetch_job.yml  next_deploy_job.yml
_next/static/chunks/: 31-a552d2a97eb01543.js
_next/static/chunks/pages/: _app-258679c28271a94f.js  _app-aa4012e330a65205.js  contribution-c2c2837ac7fed583.js  history-3ff14cd99f584b1f.js  index-b9d3fc644785f3de.js  skills-c7247bc8b226ece3.js
_next/static/css/: c26e75571c6dabbe.css
_next/static/l3DjT-kLi6CbBuldnwyE_/: _buildManifest.js
batch/: Cargo.toml
batch/src/: main.rs
docs/: CNAME  index.html
nextjs/: package-lock.json  package.json
nextjs/src/components/: Header.tsx
nextjs/src/components/Footer/: index.tsx
nextjs/src/components/Header/: index.tsx
nextjs/src/components/layout/: Layout.tsx
nextjs/src/pages/: _app.tsx  index.tsx
nextjs/src/pages/contribution/: index.tsx
nextjs/src/pages/history/: History.module.css  index.tsx
nextjs/src/pages/skills/: index.tsx
public/: contributions.json  global.css  index.html
src/: App.svelte  Footer.svelte  Profile.svelte  Timeline.svelte
svelte/: package-lock.json  package.json
svelte/src/: Header.svelte  Main.svelte  Profile.svelte
