[package]
name = "batch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-hofs = "0.1.1"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.8.1"
csv = "1.1"
gql_client = "1.0.7"
regex = "1"
reqwest = "0.11"
scraper = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
